# splitsquash

./: README.md  pyproject.toml
src/grexe/: main_screen.py  rebase_todo_widget.py  types.py  utility_functions.py
src/grexe/rebase_todo/: distribute.py  rebase_todo_interactions.py  rebase_todo_state.py
src/grexe/widgets/: default_editor_widget.py  rebase_todo_widget.py
src/splitsquash/: rebasing.py  utility_functions.py
src/splitsquash/rebase_todo/: __init__.py  distribute.py  rebase_todo_interactions.py  rebase_todo_state.py
src/splitsquash/scripts/: edit_rebase_item.py  editor.py
src/splitsquash/styles/: main.tcss
src/splitsquash/widgets/: commit_grid.py  default_editor_widget.py  editor_widget_with_file_grid.py  file_grid.py  file_selector.py  rebase_todo_widget.py  utility_widgets.py
